# construction-iso-19650-mcp

./: .cursorrules  README.md  glama.json  pyproject.toml  server.json  server.py
.well-known/mcp/: server-card.json
